[package]
name = "vote_bot"
version = "0.1.0"
description = "Modern vote bot written with rust"
edition = "2018"
homepage = "https://www.tpc3.org/"
build="src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
toml = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
chrono="0.4"
getopts="0.2"
serde_json = "1.0"
magic-crypt = "3.1.8"
sled = "0.34.6"

[build-dependencies]
built = "0.5"

[dependencies.serenity]
version = "0.10"
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]