[package]
name = "vote_bot"
version = "1.0.1"
description = "Modern vote bot written with rust"
edition = "2021"
homepage = "https://github.com/tpc3/vote_bot"
build="src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
toml = "0.5.8"
serde = "1.0.132"
serde_derive = "1.0.132"
tokio = { version = "1.15.0", features = ["full"] }
once_cell = "1.9.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
chrono= "0.4.19"
getopts= "0.2.21"
serde_json = "1.0.73"
magic-crypt = "3.1.9"
sled = "0.34.7"
fancy-regex = "0.7.1"

[build-dependencies]
built = "0.5.1"

[dependencies.serenity]
version = "0.10.9"
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
